--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1087,6 +1087,9 @@ select {
 .top-0 {
 	top: 0px;
 }
+.top-px {
+	top: 1px;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1178,6 +1181,9 @@ select {
 .block {
 	display: block;
 }
+.inline-block {
+	display: inline-block;
+}
 .flex {
 	display: flex;
 }
@@ -1216,6 +1222,18 @@ select {
 }
 .h-20 {
 	height: 5rem;
+}
+.h-screen {
+	height: 100vh;
+}
+.h-2\.5 {
+	height: 0.625rem;
+}
+.h-2 {
+	height: 0.5rem;
+}
+.h-full {
+	height: 100%;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1262,6 +1280,15 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-screen {
+	width: 100vw;
+}
+.w-3\/12 {
+	width: 25%;
+}
+.w-6\/12 {
+	width: 50%;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1282,6 +1309,12 @@ select {
 }
 .flex-shrink-0 {
 	flex-shrink: 0;
+}
+.flex-shrink {
+	flex-shrink: 1;
+}
+.flex-grow {
+	flex-grow: 1;
 }
 .origin-top-left {
 	transform-origin: top left;
@@ -1357,6 +1390,9 @@ select {
 }
 .gap-1 {
 	gap: 0.25rem;
+}
+.gap-2 {
+	gap: 0.5rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1436,6 +1472,9 @@ select {
 .border-r {
 	border-right-width: 1px;
 }
+.border-none {
+	border-style: none;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1507,8 +1546,30 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+.bg-transparent {
+	background-color: transparent;
+}
+.bg-red-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(127, 29, 29, var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-none {
+	background-image: none;
 }
 .fill-current {
 	fill: currentColor;
@@ -1522,6 +1583,12 @@ select {
 }
 .p-6 {
 	padding: 1.5rem;
+}
+.p-0 {
+	padding: 0px;
+}
+.p-3 {
+	padding: 0.75rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1672,6 +1739,9 @@ select {
 .leading-4 {
 	line-height: 1rem;
 }
+.leading-none {
+	line-height: 1;
+}
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
@@ -1748,6 +1818,9 @@ select {
 }
 .underline {
 	text-decoration: underline;
+}
+.no-underline {
+	text-decoration: none;
 }
 .antialiased {
 	-webkit-font-smoothing: antialiased;
@@ -2222,6 +2295,10 @@ select {
 
 	.md\:mt-0 {
 		margin-top: 0px;
+	}
+
+	.md\:block {
+		display: block;
 	}
 
 	.md\:grid {
