--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1223,17 +1223,14 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-screen {
-	height: 100vh;
-}
-.h-2\.5 {
-	height: 0.625rem;
-}
-.h-2 {
-	height: 0.5rem;
-}
 .h-full {
 	height: 100%;
+}
+.h-1 {
+	height: 0.25rem;
+}
+.h-screen {
+	height: 100vh;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1280,14 +1277,11 @@ select {
 .w-20 {
 	width: 5rem;
 }
-.w-screen {
-	width: 100vw;
-}
-.w-3\/12 {
-	width: 25%;
-}
 .w-6\/12 {
 	width: 50%;
+}
+.w-screen {
+	width: 100vw;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1309,12 +1303,6 @@ select {
 }
 .flex-shrink-0 {
 	flex-shrink: 0;
-}
-.flex-shrink {
-	flex-shrink: 1;
-}
-.flex-grow {
-	flex-grow: 1;
 }
 .origin-top-left {
 	transform-origin: top left;
@@ -1546,24 +1534,24 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-gray-900 {
+.bg-gray-dark {
 	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+	background-color: rgba(24, 24, 24, var(--tw-bg-opacity));
 }
 .bg-transparent {
 	background-color: transparent;
 }
-.bg-red-900 {
+.bg-gray-ligth {
 	--tw-bg-opacity: 1;
-	background-color: rgba(127, 29, 29, var(--tw-bg-opacity));
+	background-color: rgba(83, 83, 83, var(--tw-bg-opacity));
 }
-.bg-gray-400 {
+.bg-gray-ligthest {
 	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+	background-color: rgba(179, 179, 179, var(--tw-bg-opacity));
+}
+.bg-gray-darkest {
+	--tw-bg-opacity: 1;
+	background-color: rgba(18, 18, 18, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1583,9 +1571,6 @@ select {
 }
 .p-6 {
 	padding: 1.5rem;
-}
-.p-0 {
-	padding: 0px;
 }
 .p-3 {
 	padding: 0.75rem;
@@ -1916,424 +1901,10 @@ select {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
-.hover\:border-gray-300:hover {
-	--tw-border-opacity: 1;
-	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.hover\:bg-indigo-600:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
-}
-.hover\:bg-red-600:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-700:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-.hover\:bg-red-500:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-100:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-50:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.hover\:text-gray-500:hover {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-.hover\:text-gray-400:hover {
-	--tw-text-opacity: 1;
-	color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-.hover\:text-gray-700:hover {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.hover\:text-gray-800:hover {
-	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
-.hover\:text-gray-900:hover {
-	--tw-text-opacity: 1;
-	color: rgba(17, 24, 39, var(--tw-text-opacity));
-}
-.focus\:z-10:focus {
-	z-index: 10;
-}
-.focus\:border-blue-300:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(147, 197, 253, var(--tw-border-opacity));
-}
-.focus\:border-gray-900:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(17, 24, 39, var(--tw-border-opacity));
-}
-.focus\:border-indigo-300:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(165, 180, 252, var(--tw-border-opacity));
-}
-.focus\:border-red-700:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(185, 28, 28, var(--tw-border-opacity));
-}
-.focus\:border-indigo-700:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(67, 56, 202, var(--tw-border-opacity));
-}
-.focus\:border-gray-300:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.focus\:bg-indigo-600:focus {
-	--tw-bg-opacity: 1;
-	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
-}
-.focus\:bg-red-600:focus {
-	--tw-bg-opacity: 1;
-	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-}
-.focus\:bg-gray-100:focus {
-	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
-.focus\:bg-indigo-100:focus {
-	--tw-bg-opacity: 1;
-	background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
-}
-.focus\:bg-gray-50:focus {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.focus\:text-gray-700:focus {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.focus\:text-indigo-800:focus {
-	--tw-text-opacity: 1;
-	color: rgba(55, 48, 163, var(--tw-text-opacity));
-}
-.focus\:text-gray-800:focus {
-	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
-.focus\:text-gray-500:focus {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-.focus\:outline-none:focus {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
-.focus\:ring:focus {
-	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.focus\:ring-gray-300:focus {
-	--tw-ring-opacity: 1;
-	--tw-ring-color: rgba(209, 213, 219, var(--tw-ring-opacity));
-}
-.focus\:ring-indigo-200:focus {
-	--tw-ring-opacity: 1;
-	--tw-ring-color: rgba(199, 210, 254, var(--tw-ring-opacity));
-}
-.focus\:ring-red-200:focus {
-	--tw-ring-opacity: 1;
-	--tw-ring-color: rgba(254, 202, 202, var(--tw-ring-opacity));
-}
-.focus\:ring-blue-200:focus {
-	--tw-ring-opacity: 1;
-	--tw-ring-color: rgba(191, 219, 254, var(--tw-ring-opacity));
-}
-.focus\:ring-opacity-50:focus {
-	--tw-ring-opacity: 0.5;
-}
-.active\:bg-gray-100:active {
-	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
-.active\:bg-gray-900:active {
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.active\:bg-red-600:active {
-	--tw-bg-opacity: 1;
-	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-}
-.active\:bg-gray-50:active {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.active\:text-gray-700:active {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.active\:text-gray-500:active {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-.active\:text-gray-800:active {
-	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
-.disabled\:opacity-25:disabled {
-	opacity: 0.25;
-}
-@media (min-width: 640px) {
-
-	.sm\:col-span-4 {
-		grid-column: span 4 / span 4;
-	}
-
-	.sm\:mx-0 {
-		margin-left: 0px;
-		margin-right: 0px;
-	}
-
-	.sm\:mx-auto {
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	.sm\:-my-px {
-		margin-top: -1px;
-		margin-bottom: -1px;
-	}
-
-	.sm\:ml-3 {
-		margin-left: 0.75rem;
-	}
-
-	.sm\:-mr-2 {
-		margin-right: -0.5rem;
-	}
-
-	.sm\:mt-0 {
-		margin-top: 0px;
-	}
-
-	.sm\:ml-4 {
-		margin-left: 1rem;
-	}
-
-	.sm\:ml-10 {
-		margin-left: 2.5rem;
-	}
-
-	.sm\:ml-6 {
-		margin-left: 1.5rem;
-	}
-
-	.sm\:ml-0 {
-		margin-left: 0px;
-	}
-
-	.sm\:block {
-		display: block;
-	}
-
-	.sm\:flex {
-		display: flex;
-	}
-
-	.sm\:hidden {
-		display: none;
-	}
-
-	.sm\:h-10 {
-		height: 2.5rem;
-	}
-
-	.sm\:h-20 {
-		height: 5rem;
-	}
-
-	.sm\:w-10 {
-		width: 2.5rem;
-	}
-
-	.sm\:w-full {
-		width: 100%;
-	}
-
-	.sm\:max-w-md {
-		max-width: 28rem;
-	}
-
-	.sm\:max-w-sm {
-		max-width: 24rem;
-	}
-
-	.sm\:max-w-lg {
-		max-width: 32rem;
-	}
-
-	.sm\:max-w-xl {
-		max-width: 36rem;
-	}
-
-	.sm\:max-w-2xl {
-		max-width: 42rem;
-	}
-
-	.sm\:flex-1 {
-		flex: 1 1 0%;
-	}
-
-	.sm\:translate-y-0 {
-		--tw-translate-y: 0px;
-		transform: var(--tw-transform);
-	}
-
-	.sm\:scale-95 {
-		--tw-scale-x: .95;
-		--tw-scale-y: .95;
-		transform: var(--tw-transform);
-	}
-
-	.sm\:scale-100 {
-		--tw-scale-x: 1;
-		--tw-scale-y: 1;
-		transform: var(--tw-transform);
-	}
-
-	.sm\:items-start {
-		align-items: flex-start;
-	}
-
-	.sm\:items-center {
-		align-items: center;
-	}
-
-	.sm\:justify-start {
-		justify-content: flex-start;
-	}
-
-	.sm\:justify-center {
-		justify-content: center;
-	}
-
-	.sm\:justify-between {
-		justify-content: space-between;
-	}
-
-	.sm\:rounded-lg {
-		border-radius: 0.5rem;
-	}
-
-	.sm\:rounded-md {
-		border-radius: 0.375rem;
-	}
-
-	.sm\:rounded-tl-md {
-		border-top-left-radius: 0.375rem;
-	}
-
-	.sm\:rounded-tr-md {
-		border-top-right-radius: 0.375rem;
-	}
-
-	.sm\:rounded-bl-md {
-		border-bottom-left-radius: 0.375rem;
-	}
-
-	.sm\:rounded-br-md {
-		border-bottom-right-radius: 0.375rem;
-	}
-
-	.sm\:p-6 {
-		padding: 1.5rem;
-	}
-
-	.sm\:px-6 {
-		padding-left: 1.5rem;
-		padding-right: 1.5rem;
-	}
-
-	.sm\:px-0 {
-		padding-left: 0px;
-		padding-right: 0px;
-	}
-
-	.sm\:px-20 {
-		padding-left: 5rem;
-		padding-right: 5rem;
-	}
-
-	.sm\:pt-0 {
-		padding-top: 0px;
-	}
-
-	.sm\:pb-4 {
-		padding-bottom: 1rem;
-	}
-
-	.sm\:text-left {
-		text-align: left;
-	}
-
-	.sm\:text-right {
-		text-align: right;
-	}
-}
 @media (min-width: 768px) {
 
-	.md\:col-span-2 {
-		grid-column: span 2 / span 2;
-	}
-
-	.md\:col-span-1 {
-		grid-column: span 1 / span 1;
-	}
-
-	.md\:mt-0 {
-		margin-top: 0px;
-	}
-
-	.md\:block {
+	.md_block {
 		display: block;
-	}
-
-	.md\:grid {
-		display: grid;
-	}
-
-	.md\:grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
-
-	.md\:grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
-	}
-
-	.md\:gap-6 {
-		gap: 1.5rem;
-	}
-
-	.md\:border-t-0 {
-		border-top-width: 0px;
-	}
-
-	.md\:border-l {
-		border-left-width: 1px;
-	}
-}
-@media (min-width: 1024px) {
-
-	.lg\:col-span-4 {
-		grid-column: span 4 / span 4;
-	}
-
-	.lg\:px-8 {
-		padding-left: 2rem;
-		padding-right: 2rem;
 	}
 }
 
