--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1102,6 +1102,9 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
+.m-0 {
+	margin: 0px;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1277,9 +1280,6 @@ select {
 .w-20 {
 	width: 5rem;
 }
-.w-6\/12 {
-	width: 50%;
-}
 .w-screen {
 	width: 100vw;
 }
@@ -1346,11 +1346,20 @@ select {
 .list-disc {
 	list-style-type: disc;
 }
+.list-none {
+	list-style-type: none;
+}
+.auto-cols-auto {
+	grid-auto-columns: auto;
+}
 .grid-cols-6 {
 	grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-rows-1 {
+	grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1486,6 +1495,10 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
+.border-white {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1541,13 +1554,17 @@ select {
 .bg-transparent {
 	background-color: transparent;
 }
-.bg-gray-ligth {
+.bg-gray-light {
 	--tw-bg-opacity: 1;
 	background-color: rgba(83, 83, 83, var(--tw-bg-opacity));
 }
-.bg-gray-ligthest {
+.bg-gray-lightest {
 	--tw-bg-opacity: 1;
 	background-color: rgba(179, 179, 179, var(--tw-bg-opacity));
+}
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
 .bg-gray-darkest {
 	--tw-bg-opacity: 1;
@@ -1630,6 +1647,14 @@ select {
 .py-10 {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
+}
+.px-10 {
+	padding-left: 2.5rem;
+	padding-right: 2.5rem;
+}
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -1800,6 +1825,18 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-gray-lightest {
+	--tw-text-opacity: 1;
+	color: rgba(179, 179, 179, var(--tw-text-opacity));
+}
+.text-gray-light {
+	--tw-text-opacity: 1;
+	color: rgba(83, 83, 83, var(--tw-text-opacity));
+}
+.text-gray-dark {
+	--tw-text-opacity: 1;
+	color: rgba(24, 24, 24, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
