--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1117,11 +1117,11 @@ select {
 .right-0 {
 	right: 0px;
 }
-.top-px {
-	top: 1px;
-}
 .top-0 {
 	top: 0px;
+}
+.top-px {
+	top: 1px;
 }
 .z-0 {
 	z-index: 0;
@@ -1135,9 +1135,6 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
-.col-span-1 {
-	grid-column: span 1 / span 1;
-}
 .m-0 {
 	margin: 0px;
 }
@@ -1145,13 +1142,9 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
-.my-12 {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
-}
-.-mx-1 {
-	margin-left: -0.25rem;
-	margin-right: -0.25rem;
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .my-1 {
 	margin-top: 0.25rem;
@@ -1229,14 +1222,17 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.mb-0 {
-	margin-bottom: 0px;
+.ml-8 {
+	margin-left: 2rem;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.ml-8 {
-	margin-left: 2rem;
+.mr-12 {
+	margin-right: 3rem;
+}
+.mb-8 {
+	margin-bottom: 2rem;
 }
 .block {
 	display: block;
@@ -1283,6 +1279,9 @@ select {
 .h-20 {
 	height: 5rem;
 }
+.h-40 {
+	height: 10rem;
+}
 .h-full {
 	height: 100%;
 }
@@ -1291,9 +1290,6 @@ select {
 }
 .h-screen {
 	height: 100vh;
-}
-.h-auto {
-	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1339,6 +1335,9 @@ select {
 }
 .w-20 {
 	width: 5rem;
+}
+.w-40 {
+	width: 10rem;
 }
 .w-screen {
 	width: 100vw;
@@ -1451,9 +1450,6 @@ select {
 .gap-2 {
 	gap: 0.5rem;
 }
-.gap-5 {
-	gap: 1.25rem;
-}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1469,21 +1465,27 @@ select {
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+.overflow-auto {
+	overflow: auto;
 }
 .overflow-hidden {
 	overflow: hidden;
 }
 .overflow-y-auto {
 	overflow-y: auto;
+}
+.overflow-x-hidden {
+	overflow-x: hidden;
 }
 .overflow-y-hidden {
 	overflow-y: hidden;
@@ -1492,6 +1494,9 @@ select {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+.break-words {
+	overflow-wrap: break-word;
 }
 .rounded-md {
 	border-radius: 0.375rem;
@@ -1564,13 +1569,13 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
-.border-white {
-	--tw-border-opacity: 1;
-	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
-}
 .border-gray-400 {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+.border-white {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1643,14 +1648,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(18, 18, 18, var(--tw-bg-opacity));
 }
-.bg-red-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
-}
-.bg-red-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
-}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -1664,24 +1661,17 @@ select {
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
-.object-center {
-	-o-object-position: center;
-	   object-position: center;
-}
 .p-2 {
 	padding: 0.5rem;
 }
 .p-6 {
 	padding: 1.5rem;
 }
-.p-3 {
-	padding: 0.75rem;
-}
 .p-4 {
 	padding: 1rem;
 }
-.p-10 {
-	padding: 2.5rem;
+.p-3 {
+	padding: 0.75rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1739,10 +1729,6 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
-.py-96 {
-	padding-top: 24rem;
-	padding-bottom: 24rem;
-}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1776,11 +1762,14 @@ select {
 .pt-8 {
 	padding-top: 2rem;
 }
-.pb-0 {
-	padding-bottom: 0px;
+.pl-4 {
+	padding-left: 1rem;
 }
-.pb-2 {
-	padding-bottom: 0.5rem;
+.pr-6 {
+	padding-right: 1.5rem;
+}
+.pr-12 {
+	padding-right: 3rem;
 }
 .text-left {
 	text-align: left;
@@ -1827,9 +1816,6 @@ select {
 .font-semibold {
 	font-weight: 600;
 }
-.font-normal {
-	font-weight: 400;
-}
 .font-bold {
 	font-weight: 700;
 }
@@ -1856,9 +1842,6 @@ select {
 }
 .tracking-wider {
 	letter-spacing: 0.05em;
-}
-.tracking-normal {
-	letter-spacing: 0em;
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
@@ -1920,14 +1903,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
-.text-gray-lightest {
-	--tw-text-opacity: 1;
-	color: rgba(179, 179, 179, var(--tw-text-opacity));
-}
-.text-gray-dark {
-	--tw-text-opacity: 1;
-	color: rgba(24, 24, 24, var(--tw-text-opacity));
-}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -1936,13 +1911,13 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
-.text-red-400 {
+.text-gray-lightest {
 	--tw-text-opacity: 1;
-	color: rgba(248, 113, 113, var(--tw-text-opacity));
+	color: rgba(179, 179, 179, var(--tw-text-opacity));
 }
-.text-black {
+.text-gray-dark {
 	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
+	color: rgba(24, 24, 24, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2044,9 +2019,22 @@ select {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.line-clamp-2 {
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
 .hover_text-red-400:hover {
 	--tw-text-opacity: 1;
 	color: rgba(248, 113, 113, var(--tw-text-opacity));
+}
+.hover_text-white:hover {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover_underline:hover {
+	text-decoration: underline;
 }
 @media (min-width: 768px) {
 
