--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1150,6 +1150,22 @@ select {
 	margin-top: 0.25rem;
 	margin-bottom: 0.25rem;
 }
+.my-8 {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+}
+.my-12 {
+	margin-top: 3rem;
+	margin-bottom: 3rem;
+}
+.my-24 {
+	margin-top: 6rem;
+	margin-bottom: 6rem;
+}
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1222,17 +1238,17 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.ml-8 {
-	margin-left: 2rem;
-}
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.mr-12 {
-	margin-right: 3rem;
+.ml-8 {
+	margin-left: 2rem;
 }
 .mb-8 {
 	margin-bottom: 2rem;
+}
+.mt-12 {
+	margin-top: 3rem;
 }
 .block {
 	display: block;
@@ -1245,6 +1261,9 @@ select {
 }
 .inline-flex {
 	display: inline-flex;
+}
+.table {
+	display: table;
 }
 .grid {
 	display: grid;
@@ -1279,17 +1298,23 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-40 {
-	height: 10rem;
-}
 .h-full {
 	height: 100%;
+}
+.h-40 {
+	height: 10rem;
 }
 .h-1 {
 	height: 0.25rem;
 }
 .h-screen {
 	height: 100vh;
+}
+.h-80 {
+	height: 20rem;
+}
+.h-60 {
+	height: 15rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1342,6 +1367,9 @@ select {
 .w-screen {
 	width: 100vw;
 }
+.w-80 {
+	width: 20rem;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1362,6 +1390,9 @@ select {
 }
 .flex-shrink-0 {
 	flex-shrink: 0;
+}
+.border-collapse {
+	border-collapse: collapse;
 }
 .origin-top-left {
 	transform-origin: top left;
@@ -1425,6 +1456,9 @@ select {
 }
 .flex-wrap {
 	flex-wrap: wrap;
+}
+.items-end {
+	align-items: flex-end;
 }
 .items-center {
 	align-items: center;
@@ -1577,6 +1611,10 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
+.border-gray-lightest {
+	--tw-border-opacity: 1;
+	border-color: rgba(179, 179, 179, var(--tw-border-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1654,6 +1692,43 @@ select {
 .bg-none {
 	background-image: none;
 }
+.bg-gradient-to-r {
+	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.bg-gradient-to-b {
+	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.from-red-500 {
+	--tw-gradient-from: #ef4444;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
+}
+.from-purple-500 {
+	--tw-gradient-from: #8b5cf6;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(139, 92, 246, 0));
+}
+.from-indigo-500 {
+	--tw-gradient-from: #6366f1;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(99, 102, 241, 0));
+}
+.from-blue-600 {
+	--tw-gradient-from: #2563eb;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(37, 99, 235, 0));
+}
+.via-pink-500 {
+	--tw-gradient-stops: var(--tw-gradient-from), #ec4899, var(--tw-gradient-to, rgba(236, 72, 153, 0));
+}
+.via-gray-dark {
+	--tw-gradient-stops: var(--tw-gradient-from), #181818, var(--tw-gradient-to, rgba(24, 24, 24, 0));
+}
+.to-blue-500 {
+	--tw-gradient-to: #3b82f6;
+}
+.to-gray-dark {
+	--tw-gradient-to: #181818;
+}
+.to-gray-darkest {
+	--tw-gradient-to: #121212;
+}
 .fill-current {
 	fill: currentColor;
 }
@@ -1729,6 +1804,10 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
+.py-24 {
+	padding-top: 6rem;
+	padding-bottom: 6rem;
+}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1765,11 +1844,11 @@ select {
 .pl-4 {
 	padding-left: 1rem;
 }
-.pr-6 {
-	padding-right: 1.5rem;
-}
 .pr-12 {
 	padding-right: 3rem;
+}
+.pl-8 {
+	padding-left: 2rem;
 }
 .text-left {
 	text-align: left;
@@ -1810,6 +1889,22 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-7xl {
+	font-size: 4.5rem;
+	line-height: 1;
+}
+.text-9xl {
+	font-size: 8rem;
+	line-height: 1;
+}
+.text-8xl {
+	font-size: 6rem;
+	line-height: 1;
+}
 .font-medium {
 	font-weight: 500;
 }
@@ -1836,6 +1931,9 @@ select {
 }
 .leading-none {
 	line-height: 1;
+}
+.leading-9 {
+	line-height: 2.25rem;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -2019,22 +2117,32 @@ select {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.line-clamp-1 {
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+}
 .line-clamp-2 {
 	overflow: hidden;
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 2;
 }
-.hover_text-red-400:hover {
-	--tw-text-opacity: 1;
-	color: rgba(248, 113, 113, var(--tw-text-opacity));
+.hover_cursor-pointer:hover {
+	cursor: pointer;
+}
+.hover_bg-gray-lightest:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(179, 179, 179, var(--tw-bg-opacity));
+}
+.hover_bg-gray-light:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(83, 83, 83, var(--tw-bg-opacity));
 }
 .hover_text-white:hover {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.hover_underline:hover {
-	text-decoration: underline;
 }
 @media (min-width: 768px) {
 
