--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1142,6 +1142,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-24 {
+	margin-top: 6rem;
+	margin-bottom: 6rem;
+}
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
@@ -1149,18 +1153,6 @@ select {
 .my-1 {
 	margin-top: 0.25rem;
 	margin-bottom: 0.25rem;
-}
-.my-8 {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
-}
-.my-12 {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
-}
-.my-24 {
-	margin-top: 6rem;
-	margin-bottom: 6rem;
 }
 .my-2 {
 	margin-top: 0.5rem;
@@ -1243,9 +1235,6 @@ select {
 }
 .ml-8 {
 	margin-left: 2rem;
-}
-.mb-8 {
-	margin-bottom: 2rem;
 }
 .mt-12 {
 	margin-top: 3rem;
@@ -1367,9 +1356,6 @@ select {
 .w-screen {
 	width: 100vw;
 }
-.w-80 {
-	width: 20rem;
-}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1483,6 +1469,9 @@ select {
 }
 .gap-2 {
 	gap: 0.5rem;
+}
+.gap-12 {
+	gap: 3rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1692,39 +1681,12 @@ select {
 .bg-none {
 	background-image: none;
 }
-.bg-gradient-to-r {
-	background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-.from-red-500 {
-	--tw-gradient-from: #ef4444;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
-}
-.from-purple-500 {
-	--tw-gradient-from: #8b5cf6;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(139, 92, 246, 0));
-}
-.from-indigo-500 {
-	--tw-gradient-from: #6366f1;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(99, 102, 241, 0));
 }
 .from-blue-600 {
 	--tw-gradient-from: #2563eb;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(37, 99, 235, 0));
-}
-.via-pink-500 {
-	--tw-gradient-stops: var(--tw-gradient-from), #ec4899, var(--tw-gradient-to, rgba(236, 72, 153, 0));
-}
-.via-gray-dark {
-	--tw-gradient-stops: var(--tw-gradient-from), #181818, var(--tw-gradient-to, rgba(24, 24, 24, 0));
-}
-.to-blue-500 {
-	--tw-gradient-to: #3b82f6;
-}
-.to-gray-dark {
-	--tw-gradient-to: #181818;
 }
 .to-gray-darkest {
 	--tw-gradient-to: #121212;
@@ -1888,18 +1850,6 @@ select {
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
-}
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
-.text-7xl {
-	font-size: 4.5rem;
-	line-height: 1;
-}
-.text-9xl {
-	font-size: 8rem;
-	line-height: 1;
 }
 .text-8xl {
 	font-size: 6rem;
@@ -2131,10 +2081,6 @@ select {
 }
 .hover_cursor-pointer:hover {
 	cursor: pointer;
-}
-.hover_bg-gray-lightest:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(179, 179, 179, var(--tw-bg-opacity));
 }
 .hover_bg-gray-light:hover {
 	--tw-bg-opacity: 1;
